[package]
name = "service_worker"
description = "Seed service worker example"
repository = "https://github.com/seed-rs/seed"
version = "0.1.0"
authors = ["Will Johnson <william.c1.johnson@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
seed = {path = "../../"}
serde = "1.0"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.44"
features = [
  "CacheStorage",
  "Notification",
  "NotificationPermission",
  "ServiceWorker",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
  "ServiceWorkerState",
  "PushManager",
  "PushSubscription",
  "PushSubscriptionJson",
  "PushSubscriptionKeys",
  "PushSubscriptionOptionsInit",
]
